# The_Youtuber

./: .gitignore  README.md  api.py  ingestion.py  pyproject.toml  requirements.txt
backend/: data_models.py  rag.py
frontend/: app.py
